# Span_Programming_Language

./: '  .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  project.rad
compiler/: CMakeLists.txt
compiler/include/: compiler.h
compiler/include/compiler/: function.h  llvm-c.h  llvm.h  project.h  scope.h  type.h
compiler/src/: compiler.c  function.c  main.c  main.cpp  project.c  scope.c  type.c
parser/: CMakeLists.txt
parser/examples/: CMakeLists.txt
parser/examples/simple/: CMakeLists.txt  main.cpp  simple.c
parser/include/: parser.h
parser/include/parser/: arena.h  expression.h  files.h  function.h  imath.h  logging.h  map.h  nice_ints.h  ops.h  pool.h  project.h  scope.h  sourceCode.h  statment.h  struct.h  template.h  tokens.h  type.h  utils.h  value.h
parser/src/: arena.c  expression.c  files.c  function.c  imath.c  logging.c  logging.cpp  map.c  parser.c  pool.c  project.c  project.cpp  scope.c  sourceCode.c  statment.c  template.c  tokens.c  tokens.cpp  type.c  type.cpp  utils.c
span_examples/basic/: main.span
span_examples/helloWorld/: main.span
span_examples/hello_world/: main.span
span_examples/list/: main.span
span_examples/loops/: main.span
span_examples/multipleFile/: main.span  other.span
span_examples/simple/: main.span
span_parser/: CMakeLists.txt
span_parser/include/: span_parser.h
span_parser/include/span_parser/: arena.h  ast.h  default.h  expression.h  files.h  function.h  llvm.h  logging.h  project.h  scope.h  statment.h  tokens.h  type.h  utils.h
span_parser/src/: arena.c  ast.c  expression.c  files.c  function.c  logging.c  project.c  scope.c  span_parser.c  statment.c  tokens.c  type.c  utils.c
src/: function.cpp  function.h  language.cpp  language.h  main.cpp  module.cpp  module.h  scope.cpp  scope.h  span.cpp  span.h  template.cpp  template.h  token.cpp  token.h  tokens.cpp  tokens.h  type.cpp  type.h  types.cpp  types.h  utils.cpp  utils.h  value.cpp  value.h  variable.cpp  variable.h
src_old/: function.h  main.cpp  module.cpp  module.h  scope.cpp  span.cpp  token.h  type.cpp  utils.h  value.h  variable.h
tests/: CMakeLists.txt
tests/span_tests/basic/: main.span
tests/span_tests/basic_cast/: main.span
tests/span_tests/basic_index/: main.span
tests/span_tests/basic_methods/: main.span
tests/span_tests/basic_operator_overloading/: main.span
tests/span_tests/basic_ptrs/: main.span
tests/span_tests/basic_refs/: main.span
tests/span_tests/scratch/: scratch.span
tests/src/: main.c  main_scratch.c
tree-sitter-span/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-span/bindings/c/: tree-sitter-span.pc.in
tree-sitter-span/bindings/c/tree_sitter/: tree-sitter-span.h
tree-sitter-span/bindings/go/: binding.go  binding_test.go
tree-sitter-span/bindings/node/: binding.cc  index.js
tree-sitter-span/bindings/python/tests/: test_binding.py
tree-sitter-span/bindings/python/tree_sitter_span/: __init__.py  binding.c
tree-sitter-span/bindings/rust/: build.rs  lib.rs
tree-sitter-span/bindings/swift/TreeSitterSpanTests/: TreeSitterSpanTests.swift
tree-sitter-span/src/: grammar.json  node-types.json  parser.c  scanner.c
